--- a/package.json
+++ b/package.json
@@ -79,9 +79,11 @@
 	"dependencies": {
 		"bootstrap": "^4.3.1",
 		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
+		"react-player": "^2.9.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"reactstrap": "^8.9.0"
 	}
 }
